@@ -40,6 +40,7 @@ public class Main {
         new InduceSchemaTool(),
         new JsonToBinaryFragmentTool(),
         new BinaryFragmentToJsonTool(),
+        new CreateRandomFileTool(),
         new DataFileReadTool(),
         new DataFileWriteTool(),
         new DataFileGetMetaTool(),
@@ -52,6 +53,7 @@ public class Main {
         new RpcProtocolTool(),
         new FromTextTool(),
         new ToTextTool(),
+        new ToTrevniTool(),
         new TetherTool(),
         new TrevniCreateRandomTool(),
         new TrevniMetadataTool(),
